--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -2,8 +2,11 @@
 
 {% block content %}
 
-<div id="warbler-hero" class="full-width"></div>
-<img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
+<div id="warbler-hero" class="full-width">
+  <div class="image-wrapper">
+    <img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
+  </div>
+</div>
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
