--- a/warbler/templates/users/index.html
+++ b/warbler/templates/users/index.html
@@ -36,7 +36,7 @@
                     {% endif %}
 
                   </div>
-                  <p class="card-bio">{{ user.bio }}</p>
+                  <p class="card-bio">BIO HERE</p>
                 </div>
               </div>
             </div>
