--- a/warbler/templates/home.html
+++ b/warbler/templates/home.html
@@ -57,7 +57,7 @@
                 btn-sm 
                 {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
               >
-                <i class="fa fa-thumbs-up"></i> 
+              <i class="fa fa-star"></i> 
               </button>
             </form>
           </li>
