--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -2,11 +2,7 @@
 
 {% block content %}
 
-<div id="warbler-hero" class="full-width">
-  <div class="image-wrapper">
-    <img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
-  </div>
-</div>
+<div id="warbler-hero" class="full-width" style="background-image: url('{{ user.header_image_url }}');"></div>
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
