--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-<div id="warbler-hero" class="full-width" style="background-image: url('{{ user.header_image_url }}');"></div>
+<div id="warbler-hero" class="full-width">
+  <img src="{{ user.header_image_url }}" alt="Header image for {{ user.username }}">
+</div>
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
