--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -3,7 +3,9 @@
 {% block content %}
 
 <div id="warbler-hero" class="full-width">
-  <img src="{{ user.header_image_url }}" alt="Header image for {{ user.username }}">
+  <div class="image-wrapper">
+    <img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
+  </div>
 </div>
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
