fix like button on home.html

--- a/warbler/templates/home.html
+++ b/warbler/templates/home.html
@@ -38,11 +38,11 @@
       </div>
     </aside>
 
-    <div class="col-lg-6 col-md-8 col-sm-12">
+    <div class="col-lg-6 col-md-8 col-sm-12 form-area">
       <ul class="list-group" id="messages">
         {% for msg in messages %}
           <li class="list-group-item">
-            <a href="/messages/{{ msg.id  }}" class="message-link"/>
+            <a href="/messages/{{ msg.id }}" class="message-link">
             <a href="/users/{{ msg.user.id }}">
               <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
             </a>
@@ -50,16 +50,17 @@
               <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
-            </div>
-            <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like">
-              <button class="
-                btn 
-                btn-sm 
-                {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
-              >
-              <i class="fa fa-star"></i> 
+              <!-- Like button -->
+              {%if msg.user_id != g.user.id%}
+              <button data-msg-id='{{msg.id}}' style="color: light-blue" class='btn btn-link p-0 messages-like-bottom'>
+                {%if msg not in g.user.likes%}
+                  <i class="far fa-thumbs-up"></i>
+                {%else%}
+                  <i class="fas fa-thumbs-up"></i>
+                {%endif%}
               </button>
-            </form>
+              {%endif%}
+            </div>
           </li>
         {% endfor %}
       </ul>
