--- a/warbler/templates/users/likes.html
+++ b/warbler/templates/users/likes.html
@@ -1,36 +1,34 @@
-{% extends 'users/detail.html' %}
+{%extends 'users/detail.html'%}
 
-{% block user_details %}
-  <div class="col-sm-9">
-    <div class="row">
-        <ul class="list-group" id="messages">
-          {% for msg in likes %}
-            <li class="list-group-item">
-              <a href="/messages/{{ msg.id  }}" class="message-link">
-              <a href="/users/{{ msg.user.id }}">
-                <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
-              </a>
-              <div class="message-area">
-                <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
-                <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
-                <p>{{ msg.text }}</p>
-              </div>
-              {% if user.id == g.user.id %}
-              <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like">
-                <button class="
-                  btn 
-                  btn-sm 
-                  {{'btn-primary'}}"
-                >
-                  <i class="fa fa-star"></i> 
-                </button>
-              </form>
-              {% endif %}
-            </li>
-          {% endfor %}
-        </ul>
-      </div>
-    </div>
+{%block user_details%}
+  <div class="col-lg-6 col-md-8 col-sm-12 form-area">
+    <ul class="list-group" id="messages">
+      {% for msg in user.likes%}
+        <li class="list-group-item">
+          <a href="/messages/{{ msg.id }}" class="message-link">
+          <a href="/users/{{ msg.user.id }}">
+            <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
+          </a>
+          <div class="message-area">
+            <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
+            <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
+            <p>{{ msg.text }}</p>
+            <!-- Like button -->
+            {%if msg.user_id != g.user.id%}
+            <form action="/messages/{{msg.id}}/like" method="POST">
+              <button style="color:blue " class='btn btn-link p-0 messages-like-bottom' type='submit'>
+                {%if msg not in g.user.likes%}
+                  <i class="far fa-thumbs-up"></i>
+                {%else%}
+                  <i class="fas fa-thumbs-up"></i>
+                {%endif%}
+              </button>
+            </form>
+            {%endif%}
+          </div>
+        </li>
+      {% endfor %}
+    </ul>
   </div>
 
-{% endblock %}
+{%endblock%}
