--- a/warbler/templates/users/show.html
+++ b/warbler/templates/users/show.html
@@ -1,12 +1,16 @@
 {% extends 'users/detail.html' %}
 {% block user_details %}
-  <div class="col-sm-6">
+  <div class="col-sm-6 form-area">
     <ul class="list-group" id="messages">
-
-      {% for message in messages %}
+    {% if (user.private and not g.user.is_following(user)) and g.user != user %}
+    <li class="list-group-item">
+      <h1>Private<h1>
+    </li>
+    {%else%}
+      {% for message in user.messages %}
 
         <li class="list-group-item">
-          <a href="/messages/{{ message.id }}" class="message-link">
+          <a href="/messages/{{ message.id }}" class="message-link"/>
 
           <a href="/users/{{ user.id }}">
             <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
@@ -14,24 +18,26 @@
 
           <div class="message-area">
             <a href="/users/{{ user.id }}">@{{ user.username }}</a>
-            <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
+            <span class="text-muted">
+              {{ message.timestamp.strftime('%d %B %Y') }}
+            </span>
             <p>{{ message.text }}</p>
           </div>
-          {% if g.user.id != message.user_id %}
-          <form method="POST" action="/messages/{{ message.id }}/like" class="messages-like">
-            <button class="
-              btn
-              btn-sm
-              {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
-            >
-              <i class="fa fa-star"></i>
-            </button>
-          </form>
-          {% endif %}
         </li>
 
       {% endfor %}
-
+    {% endif %}
     </ul>
   </div>
+
+  {%if user.from_users%}
+  <div class="col-sm-3">
+      <h4 id="sidebar-requests">Pending Approvals:</h4>
+      {%for from_user in user.from_users%}
+       <p>Follow Request From:</p><a href="/users/{{from_user.id}}">{{from_user.username}}</a>
+       <a class="btn btn-primary" href="/users/approve/{{from_user.id}}/{{user.id}}">Approve</a>
+       <a class="btn btn-danger" href="/users/reject/{{from_user.id}}/{{user.id}}">Reject</a>
+      {%endfor%}
+  </div>
+  {%endif%}
 {% endblock %}
