--- a/warbler/templates/users/likes.html
+++ b/warbler/templates/users/likes.html
@@ -1,44 +1,36 @@
 {% extends 'users/detail.html' %}
+
 {% block user_details %}
-  <div class="col-sm-6">
-    <ul class="list-group" id="messages">
-
-      {% for message in liked_messages %}
-
-        <li class="list-group-item">
-            {% if message in g.user.likes%}
-          <a href="/messages/{{ message.id }}" class="message-link"></a>
-
-          <a href="/users/{{ message.user_id}}">
-            <img src="{{ message.user.image_url }}" alt="user image" class="timeline-image">
-          </a>
-
-          <div class="message-area">
-            <a href="/users/{{ message.user_id }}">@{{ message.user.username }}</a>
-            <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
-            <p>{{ message.text }}</p>
-            <button type="submit"><i class="fas fa-star"></i></button>  
-          </div>
-        </li>
-
-        {% else %}
-
-        <a href="/messages/{{ message.id }}" class="message-link"></a>
-
-        <a href="/users/{{ message.user_id}}">
-          <img src="{{ message.user.image_url }}" alt="user image" class="timeline-image">
-        </a>
-
-        <div class="message-area">
-          <a href="/users/{{ message.user_id }}">@{{ message.user.username }}</a>
-          <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
-          <p>{{ message.text }}</p>
-          <button type="submit"><i class="far fa-star"></i></button>  
-        </div>
-      </li>
-      {% endif %}
-      {% endfor %}
-
-    </ul>
+  <div class="col-sm-9">
+    <div class="row">
+        <ul class="list-group" id="messages">
+          {% for msg in likes %}
+            <li class="list-group-item">
+              <a href="/messages/{{ msg.id  }}" class="message-link"/>
+              <a href="/users/{{ msg.user.id }}">
+                <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
+              </a>
+              <div class="message-area">
+                <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
+                <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
+                <p>{{ msg.text }}</p>
+              </div>
+              {% if user.id == g.user.id %}
+              <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like">
+                <button class="
+                  btn 
+                  btn-sm 
+                  {{'btn-primary'}}"
+                >
+                  <i class="fa fa-thumbs-up"></i> 
+                </button>
+              </form>
+              {% endif %}
+            </li>
+          {% endfor %}
+        </ul>
+      </div>
+    </div>
   </div>
+
 {% endblock %}
