--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -2,9 +2,8 @@
 
 {% block content %}
 
-<div id="warbler-hero" class="full-width">
-  <img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
-</div>
+<img src="{{ user.header_image_url }}" alt="Image for {{ user.header_image_url }}" id="warbler-hero" class="full-width">
+
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
 <div class="row full-width">
   <div class="container">
@@ -32,7 +31,7 @@
           <li class="stat">
             <p class="small">Likes</p>
             <h4>
-              <a href="/users/{{user.id}}/likes">{{ user.likes|length }}</a>
+              <a href="/users/{{ user.id }}/likes">{{ user.likes | length }}</a>
             </h4>
           </li>
           <div class="ml-auto">
@@ -63,7 +62,7 @@
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
     <p>{{ user.bio }}</p>
-    <p class="user-location"><span class="fa fa-map-marker"></span> {{ user.location }}</p>
+    <p class="user-location"><span class="fa fa-map-marker"></span>{{ user.location }}</p>
   </div>
 
   {% block user_details %}
