--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<div class="image-wrapper">
+<div id="warbler-hero" class="full-width">
   <img src="{{ g.user.header_image_url }}" alt="" class="card-hero">
 </div>
 <img src="{{ user.image_url }}" alt="Image for {{ user.username }}" id="profile-avatar">
