change thumbs up to star in show likes and home

--- a/warbler/templates/users/show.html
+++ b/warbler/templates/users/show.html
@@ -24,7 +24,7 @@
               btn-sm
               {{'btn-primary' if message.id in likes else 'btn-secondary'}}"
             >
-              <i class="fa fa-thumbs-up"></i>
+              <i class="fa fa-star"></i>
             </button>
           </form>
           {% endif %}
