--- a/warbler/templates/users/likes.html
+++ b/warbler/templates/users/likes.html
@@ -19,7 +19,7 @@
                 btn 
                 btn-sm 
                 {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
-            <i class="fa fa-thumbs-up"></i>
+            <i class="fa fa-star"></i>
           </button>
         </form>
       </li>
