--- a/warbler/templates/users/show.html
+++ b/warbler/templates/users/show.html
@@ -3,21 +3,17 @@
   <div class="col-sm-6">
     <ul class="list-group" id="messages">
 
-      {% for message in messages %}
-
-        <li class="list-group-item">
-          <a href="/messages/{{ message.id }}" class="message-link"/>
-
-          <a href="/users/{{ user.id }}">
-            <img src="{{ user.image_url }}" alt="user image" class="timeline-image">
+      {% for msg in messages %}
+      <li class="list-group-item">
+        <a href="/messages/{{ msg.id  }}" class="message-link">
+          <a href="/users/{{ msg.user.id }}">
+            <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
           </a>
-
           <div class="message-area">
-            <a href="/users/{{ user.id }}">@{{ user.username }}</a>
-            <span class="text-muted">{{ message.timestamp.strftime('%d %B %Y') }}</span>
-            <p>{{ message.text }}</p>
+            <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
+            <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
+            <p>{{ msg.text }}</p>
           </div>
-          {% if g.user.id != message.user_id %}
           <form method="POST" action="/messages/{{ msg.id }}/like" id="messages-form" class="messages-like">
 
             <button class="
@@ -28,9 +24,7 @@
             </button>
 
           </form>
-          {% endif %}
-        </li>
-
+      </li>
       {% endfor %}
 
     </ul>
