--- a/warbler/templates/users/detail.html
+++ b/warbler/templates/users/detail.html
@@ -37,6 +37,10 @@
           </li>
           <div class="ml-auto">
             {% if g.user.id == user.id %}
+        
+            <a href="/users/changepwd" class="btn btn-outline-secondary">
+              Change Password
+            </a>
             <a href="/users/profile" class="btn btn-outline-secondary">Edit Profile</a>
             <form method="POST" action="/users/delete" class="form-inline">
               <button class="btn btn-outline-danger ml-2">Delete Profile</button>
