--- a/express-lunchly/templates/base.html
+++ b/express-lunchly/templates/base.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <link rel="stylesheet" href="https://bootswatch.com/4/minty/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  
   <title>Lunch.ly {% block title %}{% endblock %}</title>
+ 
 </head>
 <body>
 
@@ -31,6 +35,12 @@
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/add/">Add a Customer</a>
+        </li>
+        <li class="ml-5">
+          <form action="/search">
+            <input name='terms' type="text" placeholder='full name here'>
+            <button class='btn btn-primary'>Search</button>
+          </form>
         </li>
       </ul>
     </div>
