--- a/express-lunchly/templates/best_list.html
+++ b/express-lunchly/templates/best_list.html
@@ -2,13 +2,10 @@
 {% block title %}Customers{% endblock %}
 {% block content %}
 
-<a class="btn btn-primary" style="float: right" href="/add/">Add a Customer</a></p>
-
 <h1>Customers</h1>
-
 <ul style="column-count: 4">
   {% for customer in customers %}
-  <li><a href="/{{ customer.id }}/">{{ customer.fullName }}</a></li>
+  <li><a href="/{{ customer.id }}/">{{ customer.fullName() }}</a></li>
   {% endfor %}
 </ul>
 
