--- a/express-lunchly/templates/base.html
+++ b/express-lunchly/templates/base.html
@@ -38,7 +38,7 @@
         </li>
         <li class="ml-5">
           <form action="/search">
-            <input name='terms' type="text" placeholder='full name here'>
+            <input name='terms' type="text" placeholder='Search...'>
             <button class='btn btn-primary'>Search</button>
           </form>
         </li>
