top 10 customers by number of reservations

--- a/express-lunchly/templates/customer_detail.html
+++ b/express-lunchly/templates/customer_detail.html
@@ -19,7 +19,7 @@
     {% if reservations %}
     <ul>
       {% for reservation in reservations %}
-      <li><b>{{ reservation.getformattedStartAt() }}</b> for {{ reservation.numGuests }}</li>
+      <li><a href="/reservation/{{reservation.id}}"><b>{{ reservation.getformattedStartAt() }}</b> for {{ reservation.numGuests }}</li></a>
       {% endfor %}
     </ul>
     {% else %}
