--- a/express-lunchly/templates/base.html
+++ b/express-lunchly/templates/base.html
@@ -36,6 +36,9 @@
         <li class="nav-item">
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/top/">Top 10</a>
+        </li>
         <form class="d-flex" action="/search">
           <input class="form-control me-sm-2 fa" name='terms' type="search" placeholder="&#xf007;  Search customers">
           <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
