--- a/express-lunchly/templates/base.html
+++ b/express-lunchly/templates/base.html
@@ -27,17 +27,17 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav me-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/">
             Customers <span class="sr-only">(current)</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/add/">Add a Customer</a>
+          <a class="nav-link" href="/top/">Top 10</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/top/">Top 10</a>
+          <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
         <form class="d-flex" action="/search">
           <input class="form-control me-sm-2 fa" name='terms' type="search" placeholder="&#xf007;  Search customers">
