--- a/express-lunchly/templates/customer_top_ten.html
+++ b/express-lunchly/templates/customer_top_ten.html
@@ -2,11 +2,12 @@
 {% block title %}Customers{% endblock %}
 {% block content %}
 
-<h1>Customers</h1>
+<h1>Top 10 Customers (most reservations)</h1>
 <ul style="column-count: 4">
   {% for customer in customers %}
-  <li><a href="/{{ customer.id }}/">{{ customer.fullName() }}</a></li>
+  <li><a href="/{{ customer.id }}/">{{ customer.fullName }}</a></li>
   {% endfor %}
 </ul>
 
 {% endblock %}
+
