--- a/express-lunchly/templates/base.html
+++ b/express-lunchly/templates/base.html
@@ -27,7 +27,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav me-auto">
+      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
           <a class="nav-link" href="/">
             Customers <span class="sr-only">(current)</span>
@@ -40,7 +40,7 @@
           <a class="nav-link" href="/add/">Add a Customer</a>
         </li>
         <form class="d-flex" action="/search">
-          <input class="form-control me-sm-2 fa" name='terms' type="search" placeholder="&#xf007;  Search customers">
+          <input class="form-control mr-sm-2 fa" name='terms' type="search" placeholder="&#xf007;  Search customers">
           <button class="btn btn-primary my-2 my-sm-0" type="submit">Search</button>
         </form>
       </ul>
