--- a/express-lunchly/templates/reservation_edit_form.html
+++ b/express-lunchly/templates/reservation_edit_form.html
@@ -9,33 +9,36 @@
 
   <div class="col-6">
     <h3>Edit Reservation</h3>
-    <form action="/edit-reservation/{{ reservation.id }}" method="POST">
+    <form action="/{{ reservation.id }}/edit/" method="POST">
+      <h1>Edit Reservation</h1>
+    
       <div class="form-group">
-        <label for="start">Start</label>
-        <input id="start"
-               class="form-control"
-               name="startAt"
-               placeholder="yyyy-mm-dd hh:mm am/pm"
-        >
+        <label for="start">Start: </label>
+          <input id="start"
+                 class="form-control"
+                 name="startAt"
+                 value="{{ reservation.startAt }}">
       </div>
       <div class="form-group">
         <label for="num-guests"># of Guests:</label>
-        <input class="form-control"
-               value="2"
-               name="numGuests"
-               type="number"
-               id="num-guests">
+            <input id="num-guests"
+                   class="form-control"
+                   name="num-guests"
+                   value="{{ reservation.num-guests }}">
       </div>
       <div class="form-group">
-        <label for="notes">Notes:</label>
-        <textarea class="form-control"
-                  name="notes"
-                  id="notes"></textarea>
+        <label for="notes"></label>Notes:
+        <textarea id="notes"
+                  class="form-control"
+                  name="notes">{{ reservation.notes }}</textarea>
       </div>
       <button class="btn btn-primary">Add</button>
+      <a href="/{{ reservation.id }}/" class="btn btn-danger">Cancel</a>
     </form>
   </div>
 
 </div>
 
 {% endblock %}
+
+
