--- a/express-lunchly/templates/reservation_edit_form.html
+++ b/express-lunchly/templates/reservation_edit_form.html
@@ -16,15 +16,13 @@
         <label for="start">Start: </label>
           <input id="start"
                  class="form-control"
-                 name="startAt"
-                 value="{{ reservation.startAt }}">
+                 name="startAt">{{ reservation.startAt }}</input>
       </div>
       <div class="form-group">
         <label for="num-guests"># of Guests:</label>
             <input id="num-guests"
                    class="form-control"
-                   name="num-guests"
-                   value="{{ reservation.num-guests }}">
+                   name="num-guests">{{ reservation.numGuests }}</input>
       </div>
       <div class="form-group">
         <label for="notes"></label>Notes:
