--- a/express-lunchly/templates/reservation_edit_form.html
+++ b/express-lunchly/templates/reservation_edit_form.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}{{ customer.fullName }}{% endblock %}
+<!-- {% block title %}{{ customer.fullName }}{% endblock %} -->
 
 {% block content %}
-
-
 
 <div class="row">
 
@@ -16,19 +14,23 @@
         <label for="start">Start: </label>
           <input id="start"
                  class="form-control"
-                 name="startAt">{{ reservation.startAt }}</input>
+                 name="startAt" 
+                 value="{{ reservation.startAt }}"
+          >
       </div>
       <div class="form-group">
         <label for="num-guests"># of Guests:</label>
             <input id="num-guests"
                    class="form-control"
-                   name="num-guests">{{ reservation.numGuests }}</input>
+                   name="num-guests"
+                   value="{{ reservation.numGuests }}"
+            >
       </div>
       <div class="form-group">
         <label for="notes"></label>Notes:
-        <textarea id="notes"
-                  class="form-control"
-                  name="notes">{{ reservation.notes }}</textarea>
+         <textarea id="notes"
+              class="form-control"
+              name="notes">{{ reservation.notes }}</textarea>
       </div>
       <button class="btn btn-primary">Add</button>
       <a href="/{{ reservation.id }}/" class="btn btn-danger">Cancel</a>
