updates to reservation detail and edit form

--- a/express-lunchly/templates/reservation_detail.html
+++ b/express-lunchly/templates/reservation_detail.html
@@ -15,7 +15,7 @@
     <p><b>Notes: </b>{{ reservation.notes }}</p>
     
 
-    <p><a class="btn btn-primary" href="/edit-reservation/{{reservation.id}}">Edit</a></p>
+    <!-- <p><a class="btn btn-primary" href="/reservation/{{reservation.id}}/edit/">Edit</a></p> -->
 
   </div>
 
