--- a/express-lunchly/templates/reservation_edit_form.html
+++ b/express-lunchly/templates/reservation_edit_form.html
@@ -1,44 +1,33 @@
 {% extends 'base.html' %}
-<!-- {% block title %}{{ customer.fullName }}{% endblock %} -->
+
+{% block title %}Edit {{ customer.fullName }} {% endblock %}
 
 {% block content %}
 
-<div class="row">
+<form action="/{{ reservation.id }}/edit/" method="POST">
+  <h1>Edit Reservation</h1>
 
-  <div class="col-6">
-    <h3>Edit Reservation</h3>
-    <form action="/{{ reservation.id }}/edit/" method="POST">
-      <h1>Edit Reservation</h1>
-    
-      <div class="form-group">
-        <label for="start">Start: </label>
-          <input id="start"
-                 class="form-control"
-                 name="startAt" 
-                 value="{{ reservation.startAt }}"
-          >
-      </div>
-      <div class="form-group">
-        <label for="num-guests"># of Guests:</label>
-            <input id="num-guests"
-                   class="form-control"
-                   name="num-guests"
-                   value="{{ reservation.numGuests }}"
-            >
-      </div>
-      <div class="form-group">
-        <label for="notes"></label>Notes:
-         <textarea id="notes"
+  <div class="form-group">
+    <label for="start">Start: </label>
+      <input id="start"
+             class="form-control"
+             name="startAt"
+             value="{{ reservation.startAt }}">
+  </div>
+  <div class="form-group">
+    <label for="num-guests"># of Guests:</label>
+      <input id="num-guests"
+             class="form-control"
+             name="numGuests"
+             value="{{ reservation.numGuests }}">
+  </div>
+  <div class="form-group">
+    <label for="notes"></label>Notes:
+    <textarea id="notes"
               class="form-control"
               name="notes">{{ reservation.notes }}</textarea>
-      </div>
-      <button class="btn btn-primary">Add</button>
-      <a href="/{{ reservation.id }}/" class="btn btn-danger">Cancel</a>
-    </form>
   </div>
-
-</div>
-
+  <button class="btn btn-primary">Add</button>
+</form>
+  
 {% endblock %}
-
-
