updated reservation edit form

--- a/express-lunchly/templates/reservation_edit_form.html
+++ b/express-lunchly/templates/reservation_edit_form.html
@@ -28,6 +28,7 @@
               name="notes">{{ reservation.notes }}</textarea>
   </div>
   <button class="btn btn-primary">Add</button>
+  <a href="/{{ customer.id }}/" class="btn btn-danger">Cancel</a>
 </form>
   
 {% endblock %}
