--- a/express-lunchly/templates/reservation_detail.html
+++ b/express-lunchly/templates/reservation_detail.html
@@ -15,7 +15,8 @@
     <p><b>Notes: </b>{{ reservation.notes }}</p>
     
 
-   <!-- <p><a class="btn btn-primary" href="{{reservation.id}}/edit/">Edit</a></p> -->
+    <p><a class="btn btn-primary" href="/{{ reservation.id }}/edit-reservation/">Edit</a></p>
+
 
   </div>
 
