--- a/express-lunchly/templates/reservation_edit_form.html
+++ b/express-lunchly/templates/reservation_edit_form.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<form action="/{{ reservation.id }}/edit/" method="POST">
+<form action="/{{ reservation.id }}/edit-reservation/" method="POST">
   <h1>Edit Reservation</h1>
 
   <div class="form-group">
@@ -28,7 +28,6 @@
               name="notes">{{ reservation.notes }}</textarea>
   </div>
   <button class="btn btn-primary">Add</button>
-  <a href="/{{ customer.id }}/" class="btn btn-danger">Cancel</a>
 </form>
   
 {% endblock %}
