--- a/express-lunchly/templates/base.html
+++ b/express-lunchly/templates/base.html
@@ -17,7 +17,7 @@
 
 <div class="container-fixed">
 
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark">
+  <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <a class="navbar-brand" href="/">Lunch.ly</a>
     <button class="navbar-toggler"
             type="button"
