--- a/react-prop-pokedex/pokemon-app/src/Pokecard.css
+++ b/react-prop-pokedex/pokemon-app/src/Pokecard.css
@@ -2,7 +2,7 @@
     background-color: #f5f5f5;
     border-radius: 10px;
     border: 1px solid #e5e5e5;
-    padding: 3px;
+    padding: 5px;
     margin: 10px;
     width: 200px;
     display: inline-block;
@@ -18,8 +18,17 @@
 
 .Pokecard-data {
     font-size: 1rem;
+    font-family: "roboto", sans-serif;
 }
 
 .Pokecard-img {
     width: 100%;
 }
+
+img {
+    width: 100%
+}
+
+
+
+
