--- a/react-prop-pokedex/pokemon-app/src/Pokedex.css
+++ b/react-prop-pokedex/pokemon-app/src/Pokedex.css
@@ -3,7 +3,7 @@
 }
 
 .Pokedex-title {
-    color: grey;
+    color: purple;
     font-family: "Roboto", sans-serif;
     font-weight:lighter;
     font-size: 2rem;
