--- a/react-prop-pokedex/pokemon-app/src/Pokecard.css
+++ b/react-prop-pokedex/pokemon-app/src/Pokecard.css
@@ -1,7 +1,8 @@
 .Pokecard {
-    background-color: #f5f5f5;
+    background-color: grey;
+    background-image: linear-gradient(purple, yellow);
     border-radius: 10px;
-    border: 1px solid #e5e5e5;
+    border: 1px solid black;
     padding: 5px;
     margin: 10px;
     width: 200px;
@@ -10,15 +11,16 @@
 }
 
 .Pokecard-title {
-    color: black;
+    color: white;
     font-size: 1.5rem;
     font-family: "roboto", sans-serif;
-    font-weight: lighter;
+    font-weight: bold;
 }
 
 .Pokecard-data {
     font-size: 1rem;
     font-family: "roboto", sans-serif;
+    font-weight: bold;
 }
 
 .Pokecard-img {
