--- a/react-prop-pokedex/pokemon-app/src/Pokedex.css
+++ b/react-prop-pokedex/pokemon-app/src/Pokedex.css
@@ -17,6 +17,8 @@
 
 .Pokedex-winner {
     font-weight: bold;
+    font-family: "Roboto", sans-serif;
+    font-size: 1.5rem;
     color: orangered;
 }
 
