--- a/react-state-carousel-coins/carousel/src/Card.css
+++ b/react-state-carousel-coins/carousel/src/Card.css
@@ -1,7 +1,7 @@
 .Card {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  s fialign-items: center;
   justify-content: center;
 }
 
