--- a/react-1/madlibs-app/src/madlib.css
+++ b/react-1/madlibs-app/src/madlib.css
@@ -1,14 +1,13 @@
 body {
-    background-color: lightblue;
+    background-color: rgb(255, 192, 4);
     margin: 0;
     padding: 0;
 }
 
-
-.title {
-    font-size: 3rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
-    text-align: center;
+img {
+    display: block;
     margin: 0 auto;
+    width: 450px;
+    height: auto;
 }
+
