--- a/vending-machine/src/VendingMachine.css
+++ b/vending-machine/src/VendingMachine.css
@@ -9,7 +9,7 @@
 
 .VendingMachine .Message {
   margin-top: 10px;
-  font-size: .6rem;
+  font-size: .7rem;
 }
 
 a {
@@ -18,6 +18,7 @@ a {
   border: 1px solid #ffffff;
   border-radius: 20px;
   padding: 2px 10px;
+  background: rgba(11, 11, 11, 0.5) 
 }
 
 a:hover {
@@ -26,7 +27,7 @@ a:hover {
 
 .VendingMachine-links {
   display: flex;
-  margin-left: 550px;
+  margin-left: 500px;
   justify-content: space-around;
   margin-top: 2rem;
 }
@@ -41,5 +42,12 @@ img {
 h1 {
   text-align: center;
   color: black;
+}
+
+.backgroundImage {
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 60vh;
+  width: 60vw;
 }
 
