--- a/vending-machine/src/Chips.css
+++ b/vending-machine/src/Chips.css
@@ -1,21 +1,34 @@
 .Chips {
-    width: 30vw;
-    height: 30vh;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .Chips .message {
-    padding: 30px;
-    background-color: rgba(0, 0, 0, 0.4);
-    color: white;
-    text-transform: uppercase;
-    border-radius: 10px;
-  }
-  
-  .Chips .message h1 {
-    text-align: center;
-    color: white;
-  }
+  width: 100vw;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.Chips button {
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  border: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  background-color: pink;
+}
+
+.Chips button:hover {
+  background-color: red;
+  cursor: pointer;
+}
+
+.Chips button:active,
+.Chips button:focus {
+  outline: none;
+}
+
+.bag {
+  background: none;
+  position: absolute;
+  width: 150px;
+}
