--- a/vending-machine/src/VendingMachine.css
+++ b/vending-machine/src/VendingMachine.css
@@ -1,7 +1,8 @@
 .VendingMachine {
   text-align: center;
-  width: 100vw;
-  height: 100vh;
+  margin: 0 auto;
+  height: 700px;
+  width: 600px;
   background-size: cover;
   align-items: left;
   justify-content: space-between;
@@ -15,6 +16,7 @@
 a {
   color: aqua;
   text-decoration: none;
+  align-items: left;
   border: 1px solid #ffffff;
   border-radius: 20px;
   padding: 2px 10px;
@@ -27,15 +29,13 @@ a:hover {
 
 .VendingMachine-links {
   display: flex;
-  margin-left: 500px;
+  margin-left: 420px;
   justify-content: space-around;
-  margin-top: 2rem;
 }
 
 img {
   display: flex;
   width: 50%;
-  height: auto;
   margin: 0 auto;
 }
 
@@ -50,4 +50,3 @@ h1 {
   height: 60vh;
   width: 60vw;
 }
-
