--- a/vending-machine/src/Soda.css
+++ b/vending-machine/src/Soda.css
@@ -1,21 +1,34 @@
 .Soda {
-    width: 30vw;
-    height: 30vh;
-    background-size: cover;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .Soda .message {
-    padding: 30px;
-    background-color: rgba(0, 0, 0, 0.4);
-    color: white;
-    text-transform: uppercase;
-    border-radius: 10px;
-  }
-  
-  .Soda .message h1 {
-    text-align: center;
-    color: white;
-  }
+  width: 100vw;
+  height: 85vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.Soda button {
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  border: none;
+  font-size: 18px;
+  text-transform: uppercase;
+  background-color: pink;
+}
+
+.Soda button:hover {
+  background-color: red;
+  cursor: pointer;
+}
+
+.Soda button:active,
+.Soda button:focus {
+  outline: none;
+}
+
+.bottle {
+  background: none;
+  position: absolute;
+  width: 200px;
+}
