--- a/react-router-patterns/dog-finder/src/DogDetails.css
+++ b/react-router-patterns/dog-finder/src/DogDetails.css
@@ -1,5 +1,15 @@
+
+.row DogDetails {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  margin-left: 20px;
+}
+
 .DogDetails img {
-  max-width: 50%;
+  width: 60%;
   border-radius: 5%;
   margin-top: 1rem;
+  padding: 5px;
 }
