--- a/react-router-patterns/dog-finder/src/DogList.css
+++ b/react-router-patterns/dog-finder/src/DogList.css
@@ -2,9 +2,7 @@
 
 .DogList {
   margin: 0 auto;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
+  width: 100%;
   align-items: center;
   padding: 5px;
 }
@@ -16,10 +14,27 @@
   padding: 5px;
 }
 
+.col {
+  display: flex;
+  flex-direction: column;
+  width: 98%;
+  align-items: center;
+  background-color: black;
+  color: #fff;
+}
+
 .row {
   display: flex;
   flex-direction: row;
+  width: 100%;
   justify-content: space-around;
   align-items: center;
+  color: #fff;
 }
 
+h2 {
+  font-size: 2rem;
+  margin: 0 auto;
+  padding: 5px;
+  color: #fff;
+}
