fixes to lock joke icon and lock functionality

--- a/react-jokes-classes/src/Joke.css
+++ b/react-jokes-classes/src/Joke.css
@@ -26,7 +26,12 @@
   width: 500px;
 }
 
-.Joke-buttons a {
-  color: red
+
+.LockButton {
+  background-color: transparent;
+  border: none;
+  color: white;
+  font-size: 1.2em;
+  cursor: pointer;
 }
 
