--- a/yodlr-take-home-main/frontend/src/Admin.css
+++ b/yodlr-take-home-main/frontend/src/Admin.css
@@ -1,18 +1,34 @@
 .Admin {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
-    height: 100vh;
     background-color: #f5f5f5;
 }
 
 li {
-    list-style-type: none;
-    text-decoration: none;
-    border: 1px solid darkgrey;
+    display: inline-block;
+    list-style: none;
+    width: 48%;
+    margin: 5px;
+    padding: 5px;
+    color: darkblue;
+    font-size: 12px;
+    cursor: pointer;
+    border: 1px dotted #ccc;
     border-radius: 10px;
-    width: 40%;
-    padding: 10px;
 }
+
+h1 {
+    font-size: 20px;
+    margin-left: 20px;
+    font-weight: bold;
+    color: darkblue;
+}
+
+
+
+
+
+
+
 
