--- a/yodlr-take-home-main/frontend/src/UserSignUp.css
+++ b/yodlr-take-home-main/frontend/src/UserSignUp.css
@@ -3,34 +3,39 @@
     align-items: center;
     justify-content: center;
     background-color: #f5f5f5;
+    height: 100vh;
 }
 
-.form {
+form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 40%;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px -6px #222;
+}
+
+form input {
+    margin: 10px;
     padding: 10px;
-    border: 1px solid darkgrey;
-    border-radius: 10px;
+    width: 300px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
 }
 
-.form input {
-    margin: 5px;
-    padding: 5px;
+form button {
+    margin: 10px;
+    padding: 10px;
+    width: 300px;
+    border: 1px solid #ccc;
     border-radius: 5px;
-    border: 1px solid darkgrey;
-}
-
-.form button {
-    margin: 5px;
-    padding: 5px;
-    border-radius: 5px;
-    border: 1px solid darkgrey;
     background-color: #61dafb;
-    color: white;
+    color: #fff;
+    font-size: 16px;
     font-weight: bold;
+    cursor: pointer;
 }
 
 
