--- a/poke-game/frontend/src/Game.css
+++ b/poke-game/frontend/src/Game.css
@@ -55,6 +55,7 @@
   flex: 1;
   background-color: #ccc;
   padding: 16px;
+  margin-left: 8px;
   border: 1px solid #000;
   border-radius: 10px;
 }
@@ -87,13 +88,21 @@
   justify-content: left;
   padding: 20px;
   margin-top: 20px;
+  font-family: "Emilys Candy", cursive;
   background-color: #fff;
   border: 1px solid #000;
   border-radius: 10px;
 }
 
+h1 {
+  font-size: 40px;
+  font-weight: bold;
+  font-family: "Emilys Candy", cursive;
+  margin-bottom: 10px;}
+
 p {
   font-size: 16px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
 }
 
