--- a/poke-game/frontend/src/PokeDex.css
+++ b/poke-game/frontend/src/PokeDex.css
@@ -1,21 +1,37 @@
 .PokeDex {
   flex: 1;
-  background: url("https://st2.depositphotos.com/3213441/12022/v/450/depositphotos_120226584-stock-illustration-pokemon-go-pokeball-seamless-texture.jpg");
   border-radius: 10px;
+  margin: 10px;
 }
 
-.PokeDex-buttons {
-  background-color: rgba(61, 125, 202, 0.9);
-  margin: 10px 30px;
-  border-radius: 10px;
-  padding: 10px 0;
-  color: white;
-}
-
-.PokeDex-buttons h3 {
-  margin: 0;
-}
 
 .PokeDex-card-area {
-  flex: 1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  background-color: #f5f5f5;
+  gap: 10px;
+  margin: 10px;
 }
+
+
+.title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+h1 {
+  font-size: 40px;
+  font-weight: bold;
+  font-family: "Emilys Candy", cursive;
+  margin-bottom: 10px;}
+
+p {
+  font-size: 14px;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-weight: bold;
+}
+
+
+/* Path: src/Board.css */
