--- a/poke-game/frontend/src/PokemonCard.css
+++ b/poke-game/frontend/src/PokemonCard.css
@@ -2,7 +2,7 @@
   background-color: silver;
   background-image: linear-gradient(silver, white);
   border-radius: 8px;
-  border: 5px solid #3d7dca;
+  border: 4px solid #3d7dca;
   box-sizing: border-box;
   color: black;
   width: 40%;
@@ -32,8 +32,8 @@
 
 .PokemonCard-stats {
   list-style-type: none;
-  font-size: 0.6em;
+  font-size: 0.7em;
   padding: 0;
-  text-align: right;
+  text-align: left;
   margin: 0;
 }
