--- a/poke-game/frontend/src/game/Game.css
+++ b/poke-game/frontend/src/game/Game.css
@@ -1,13 +1,14 @@
 .Game {
   text-align: center;
-  width: 100%;
   display: flex;
 }
 
-.Game > main {
-  display: flex;
-  width: 100%;
+.Game main {
   flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .game-container {
@@ -19,11 +20,12 @@
   padding: 10px;
   background-color: rgba(225, 226, 228, 0.95);
   margin-top: 20px;
-  width: 90%;
-  height: 80vh;
+  width: 90vw;
+  height: 90vh;
   border: 1px solid #000;
   border-radius: 10px;
 }
+
 
 .homepage-image {
   width: 70%;
@@ -33,11 +35,11 @@
 .column-left {
   display: flex;
   flex-direction: column;
-  width: 70%;
   align-items: center;
   justify-content: center;
   flex: 1;
 }
+
 
 .column-right {
   display: flex;
@@ -47,6 +49,12 @@
   justify-content: center;
 }
 
+
+.Card {
+  cursor: pointer;
+  width: 90%;
+}
+
 .CardBody {
   display: flex;
   flex-direction: column;
@@ -54,19 +62,14 @@
   justify-content: center;
   flex: 1;
   background-color: #ccc;
-  padding: 16px;
-  margin-left: 8px;
   border: 1px solid #000;
   border-radius: 10px;
+  width: 100%;
 }
 
-.Card {
-  cursor: pointer;
-  margin: 8px;
-}
 
 .title {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   margin-bottom: 16px;
 }
@@ -98,10 +101,11 @@ h1 {
   font-size: 40px;
   font-weight: bold;
   font-family: "Emilys Candy", cursive;
-  margin-bottom: 10px;}
+  margin-bottom: 10px;
+}
 
 p {
-  font-size: 16px;
+  font-size: 30px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
 }
