--- a/poke-game/frontend/src/pokedex/PokemonList.css
+++ b/poke-game/frontend/src/pokedex/PokemonList.css
@@ -1,18 +1,24 @@
-.PokeDex {
-  flex: 1;
+
+.PokemonList-container {
+  justify-content: center;
+  justify-content: space-between;
+  background-color: rgba(225, 226, 228, 0.95);
+  border: 1px solid #000;
   border-radius: 10px;
-  margin: 10px;
-  background-color: #f5f5f5; 
+  padding: 5px;
+  width: 95%;
+  margin: 0 auto;
 }
 
 
 .PokeDex-card-area {
   display: flex;
   flex-wrap: wrap;
+  flex-direction: column;
   justify-content: center;
   background-color: #f5f5f5;
-  gap: 10px;
-  margin: 10px;
+  gap: 20px;
+  padding: 20px;
 }
 
 
@@ -29,7 +35,7 @@ h1 {
   margin-bottom: 10px;}
 
 p {
-  font-size: 14px;
+  font-size: 16px;
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-weight: bold;
 }
