--- a/poke-game/frontend/src/pokedex/PokemonCard.css
+++ b/poke-game/frontend/src/pokedex/PokemonCard.css
@@ -5,15 +5,14 @@
   border: 2px solid #3d7dca;
   box-sizing: border-box;
   color: hsl(0, 0%, 0%);
-  width: 25%;
   margin: 10px;
   display: inline-block;
-  height: 160px;
+  width: 300px;
 }
 
 .PokemonCard img {
   align-self: start;
-  width: 160px;
+  width: 8rem;
 }
 
 .PokemonCard-front {
