--- a/poke-game/frontend/src/routes-nav/NavBar.css
+++ b/poke-game/frontend/src/routes-nav/NavBar.css
@@ -8,6 +8,11 @@
     padding: 5px;
 }
 
+.NavBar img {
+    width: 40px;
+    height: 40px;
+}
+
 .NavBar a {
     color: #fff;
     text-decoration: none;
