--- a/poke-game/frontend/src/game/Game.css
+++ b/poke-game/frontend/src/game/Game.css
@@ -9,7 +9,8 @@
 
 .game-container {
   display: flex;
-  margin-top: 100px;  
+  margin-top: 100px;
+  margin-left: 20px; 
   align-items: center;
   justify-content: center;
   padding: 10px;
